# url-shortener-rust

./: Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml  nginx.conf
frontend/: Dockerfile  index.html  package-lock.json
frontend/src/: App.css  App.tsx  NotFound.tsx  config.tsx  main.tsx
migrations/2025-07-23-160904_create_shortened_urls/: down.sql  up.sql
migrations/2025-07-23-163125_create_shortened_urls/: down.sql  up.sql
migrations/2025-07-23-164814_updated_at_trigger/: down.sql  up.sql
migrations/2025-07-23-170351_remove_last_accessed/: down.sql  up.sql
migrations/2025-07-23-170516_click_count_not_null/: down.sql  up.sql
migrations/2025-08-03-143421_create_indexes/: down.sql  up.sql
migrations/2025-08-03-144814_autoincrement/: down.sql  up.sql
src/: config.rs  main.rs  schema.rs
src/db/: mod.rs  models.rs  pool.rs
src/routes/: generated_urls.rs  mod.rs  route.rs  shortener.rs
